# garf

./: .bazeliskrc  .bazelrc  .gitignore  .golangci.toml  BUILD.bazel  MODULE.bazel  Makefile  README.md  analyzers.bzl  cli.go  garf.go  go.mod  go.sum
.github/: dependabot.yml
.github/workflows/: ci.yml
artifact/: BUILD.bazel  parser.go  parser_test.go  types.go
cmd/: BUILD.bazel  mirror.go  root.go
core/: BUILD.bazel  client.go  jfrog_client.go  static_client.go
pkg/pointer/: BUILD.bazel  README.md  pointer.go  pointer_test.go
pkg/templates/: README.md
