load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library", "nogo")

# gazelle:proto disable_global
gazelle(name = "gazelle")

nogo(
    name = "garf_nogo",
    vet = True,
    visibility = ["//visibility:public"],
    deps = [
        # https://pkg.go.dev/golang.org/x/tools/go/analysis/passes
        "@org_golang_x_tools//go/analysis/passes/copylock",
        "@org_golang_x_tools//go/analysis/passes/slog",
    ],
)

go_library(
    name = "garf_lib",
    srcs = ["garf.go"],
    importpath = "github.com/albertocavalcante/garf",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd",
    ],
)

go_binary(
    name = "garf",
    embed = [":garf_lib"],
    visibility = ["//visibility:public"],
)
