load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library", "nogo")
load("//:analyzers.bzl", "go_vet_analyzers_labels")

# gazelle:proto disable_global
gazelle(name = "gazelle")

nogo(
    name = "garf_nogo",
    visibility = ["//visibility:public"],
    deps = go_vet_analyzers_labels(),
)

go_library(
    name = "garf_lib",
    srcs = ["garf.go"],
    importpath = "github.com/albertocavalcante/garf",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd",
    ],
)

go_binary(
    name = "garf",
    embed = [":garf_lib"],
    visibility = ["//visibility:public"],
)
