"""CLI"""

module(
    name = "cli",
    version = "0.0.1",
)

bazel_dep(name = "rules_go", version = "0.46.0")
bazel_dep(name = "gazelle", version = "0.35.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.22.5")
go_sdk.nogo(nogo = "//:cli_nogo")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# nogo dependency
go_deps.module(
    path = "golang.org/x/tools",
    sum = "h1:SGsXPZ+2l4JsgaCKkx+FQ9YZ5XEtA1GZYuoDjenLjvg=",
    version = "v0.23.0",
)

# managed by `bazel mod tidy`
use_repo(
    go_deps,
    "com_github_spf13_cobra",
    "org_golang_x_tools",
)
