load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "mirror.go",
        "root.go",
    ],
    importpath = "github.com/albertocavalcante/garf/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//artifact",
        "//core",
        "@com_github_spf13_cobra//:cobra",
    ],
)
