load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "core",
    srcs = [
        "jfrog_client.go",
        "static_client.go",
    ],
    importpath = "github.com/albertocavalcante/garf/core",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_jfrog_jfrog_client_go//artifactory",
        "@com_github_jfrog_jfrog_client_go//artifactory/auth",
        "@com_github_jfrog_jfrog_client_go//artifactory/services",
        "@com_github_jfrog_jfrog_client_go//config",
    ],
)
